syntax = "proto3";

// Package name must match the module API type namespace
package Foompany.Services.API.SampleService1.Modules.SampleModule1;

// The service definition. This must match exactly the class name of the module API type
service Actions {
  // Sends a greeting
  rpc DoTheThing (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string InputName = 1;
}

// The response message containing the result.
message HelloReply {
  string Result = 1;
}
